// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-form-field-radio #render should render component as expected (1) 1`] = `"<gux-form-field-radio hydrated=""> <input slot="input" type="radio" name="food-1" value="pizza" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Pizza</label> </gux-form-field-radio>"`;

exports[`gux-form-field-radio #render should render component as expected (1) 2`] = `
<div aria-disabled="false" class="gux-form-field-container">
  <div class="gux-input-label">
    <div class="gux-input">
      <slot name="input"></slot>
    </div>
    <div class="gux-label">
      <slot name="label"></slot>
    </div>
  </div>
  <div class="error-and-help-text">
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="fa/hexagon-exclamation-solid" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-radio #render should render component as expected (2) 1`] = `"<gux-form-field-radio class="gux-disabled" hydrated=""> <input slot="input" type="radio" name="food-1" value="pizza" disabled="" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Pizza</label> </gux-form-field-radio>"`;

exports[`gux-form-field-radio #render should render component as expected (2) 2`] = `
<div aria-disabled="true" class="gux-form-field-container">
  <div class="gux-input-label">
    <div class="gux-input">
      <slot name="input"></slot>
    </div>
    <div class="gux-label">
      <slot name="label"></slot>
    </div>
  </div>
  <div class="error-and-help-text">
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="fa/hexagon-exclamation-solid" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-radio #render should render component as expected (3) 1`] = `"<gux-form-field-radio class="gux-input-error" hydrated=""> <input slot="input" type="radio" name="food-1" value="pizza" id="gux-form-field-input-i" aria-describedby="gux-form-field-error-i"> <label slot="label" for="gux-form-field-input-i">Pizza</label> <span slot="error" id="gux-form-field-error-i">This is an error message</span> </gux-form-field-radio>"`;

exports[`gux-form-field-radio #render should render component as expected (3) 2`] = `
<div aria-disabled="false" class="gux-form-field-container">
  <div class="gux-input-label">
    <div class="gux-input">
      <slot name="input"></slot>
    </div>
    <div class="gux-label">
      <slot name="label"></slot>
    </div>
  </div>
  <div class="error-and-help-text">
    <div class="gux-form-field-error gux-show">
      <gux-icon hydrated="" icon-name="fa/hexagon-exclamation-solid" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-radio #render should render component as expected (4) 1`] = `"<gux-form-field-radio hydrated=""> <input slot="input" type="radio" name="food-1" value="pizza" checked="" id="gux-form-field-input-i"> <label slot="label" for="gux-form-field-input-i">Pizza</label> </gux-form-field-radio>"`;

exports[`gux-form-field-radio #render should render component as expected (4) 2`] = `
<div aria-disabled="false" class="gux-form-field-container">
  <div class="gux-input-label">
    <div class="gux-input">
      <slot name="input"></slot>
    </div>
    <div class="gux-label">
      <slot name="label"></slot>
    </div>
  </div>
  <div class="error-and-help-text">
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="fa/hexagon-exclamation-solid" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-radio #render should render component as expected (5) 1`] = `"<gux-form-field-radio class="gux-input-error" hydrated=""> <input slot="input" type="radio" name="food-1" value="pizza" id="gux-form-field-input-i" aria-describedby="gux-form-field-error-i"> <label slot="label" for="gux-form-field-input-i">Pizza</label> <span slot="error" id="gux-form-field-error-i">Error message</span> </gux-form-field-radio>"`;

exports[`gux-form-field-radio #render should render component as expected (5) 2`] = `
<div aria-disabled="false" class="gux-form-field-container">
  <div class="gux-input-label">
    <div class="gux-input">
      <slot name="input"></slot>
    </div>
    <div class="gux-label">
      <slot name="label"></slot>
    </div>
  </div>
  <div class="error-and-help-text">
    <div class="gux-form-field-error gux-show">
      <gux-icon hydrated="" icon-name="fa/hexagon-exclamation-solid" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-radio #render should render component as expected (6) 1`] = `"<gux-form-field-radio class="gux-input-error gux-disabled" hydrated=""> <input slot="input" type="radio" name="food-1" value="pizza" disabled="" id="gux-form-field-input-i" aria-describedby="gux-form-field-error-i"> <label slot="label" for="gux-form-field-input-i">Pizza</label> <span slot="error" id="gux-form-field-error-i">Error message</span> </gux-form-field-radio>"`;

exports[`gux-form-field-radio #render should render component as expected (6) 2`] = `
<div aria-disabled="true" class="gux-form-field-container">
  <div class="gux-input-label">
    <div class="gux-input">
      <slot name="input"></slot>
    </div>
    <div class="gux-label">
      <slot name="label"></slot>
    </div>
  </div>
  <div class="error-and-help-text">
    <div class="gux-form-field-error gux-show">
      <gux-icon hydrated="" icon-name="fa/hexagon-exclamation-solid" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-radio #render should render component as expected (7) 1`] = `"<gux-form-field-radio hydrated=""> <input slot="input" type="radio" name="food-1" value="spaghetti" id="gux-form-field-input-i" aria-describedby="gux-form-field-help-i"> <label slot="label" for="gux-form-field-input-i">Spaghetti</label> <span slot="help" id="gux-form-field-help-i">This is a help message</span> </gux-form-field-radio>"`;

exports[`gux-form-field-radio #render should render component as expected (7) 2`] = `
<div aria-disabled="false" class="gux-form-field-container">
  <div class="gux-input-label">
    <div class="gux-input">
      <slot name="input"></slot>
    </div>
    <div class="gux-label">
      <slot name="label"></slot>
    </div>
  </div>
  <div class="error-and-help-text">
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="fa/hexagon-exclamation-solid" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help gux-show">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-radio #render should render component as expected (8) 1`] = `"<gux-form-field-radio class="gux-disabled" hydrated=""> <input slot="input" type="radio" name="food-1" value="spaghetti" disabled="" id="gux-form-field-input-i" aria-describedby="gux-form-field-help-i"> <label slot="label" for="gux-form-field-input-i">Spaghetti</label> <span slot="help" id="gux-form-field-help-i">This is a help message</span> </gux-form-field-radio>"`;

exports[`gux-form-field-radio #render should render component as expected (8) 2`] = `
<div aria-disabled="true" class="gux-form-field-container">
  <div class="gux-input-label">
    <div class="gux-input">
      <slot name="input"></slot>
    </div>
    <div class="gux-label">
      <slot name="label"></slot>
    </div>
  </div>
  <div class="error-and-help-text">
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="fa/hexagon-exclamation-solid" size="inherit"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help gux-show">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;
